welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value getPos
	if(getPos()==(getMondeHauteur()-1,getMondeHauteur()-1)){true}else{false}
           ^ColumnByColumn:12: error: not found: value getPos
			getPos(c,l)
                        ^ColumnByColumn:14: error: not found: value getPos
		getPos(c,0)
                ^